[package]
name = "topk8"
version = "0.0.1"
license = "Apache-2.0"
description = "Convert private keys to PKCS#8 format in pure Rust"
keywords = ["pkcs8", "pem"]
homepage = "https://github.com/kazk/topk8"
repository = "https://github.com/kazk/topk8"
readme = "README.md"
authors = ["kazk <kazk.dev@gmail.com>"]
edition = "2021"

[dependencies]
pkcs8 = { version = "0.10.2", features = ["alloc", "pem", "std"] }
rsa = { version = "0.9.8" }
thiserror = "2.0.12"

[dev-dependencies]
indoc = "2.0.6"
